Readded script to download external images. Starting to rework links.

--- a/content/posts/2020-10-24-rotf-remix-houlens-tomb.mdx
+++ b/content/posts/2020-10-24-rotf-remix-houlens-tomb.mdx
@@ -5,7 +5,7 @@ date: '2020-10-24'
 excerpt: >-
   Custom DungeonDraft battlemap for Rime of the Frostmaiden: a Horizon Walker's
   tomb besieged by a barbarian cult with sentries, a camp, and hidden leaders.
-featured_image: /images/optionalrule-exploring-question.webp
+featured_image: /images/cache/c7hhvkh7st961.jpg
 draft: false
 showToc: false
 tags:
@@ -19,4 +19,4 @@ I created this map for a custom scenario in my Rime of the Frostmaiden Campaign 
 
 In my scenario, the players faced a cult of Barbarians who were seeking magic items from the ancient tomb of one of the original Horizon Walkers.  A group were guarding the entrance, while the main group camped out in the first chamber.  The leaders were back toward the secret entrance to the tomb.
 
-[![Battlemap of a natural cavern with hidden tomb in the back.](https://i.redd.it/c7hhvkh7st961.jpg)](https://i.redd.it/c7hhvkh7st961.jpg)
+[![Battlemap of a natural cavern with hidden tomb in the back.](/images/cache/c7hhvkh7st961.jpg)](/images/cache/c7hhvkh7st961.jpg)
