--- a/content/posts/2020-11-03-tresendar-manor-above-ground.mdx
+++ b/content/posts/2020-11-03-tresendar-manor-above-ground.mdx
@@ -5,7 +5,7 @@ date: '2020-11-03'
 excerpt: >-
   A large hilltop ruined manor battlemap for a prequel one-shot to Lost Mines of
   Phandelver, created in DungeonDraft and sized for extended play.
-featured_image: /images/optionalrule-escaping-fireball.webp
+featured_image: /images/cache/66rci2cg5cx51.jpg
 draft: false
 showToc: false
 tags:
@@ -16,4 +16,4 @@ tags:
 
 I created this map for a one-shot I created as a prequil to Lost Mines of Phandelver, about the recovery of [Tresendar Manor](https://forgottenrealms.fandom.com/wiki/Tresendar_Mano). It's a fairly large map. Created using [DungeonDraft](https://dungeondraft.net/).
 
-[![Battlemap of a ruined manor atop a small hill, surrounded by countryside.](https://i.redd.it/66rci2cg5cx51.jpg)](https://i.redd.it/66rci2cg5cx51.jpg)
+[![Battlemap of a ruined manor atop a small hill, surrounded by countryside.](/images/cache/66rci2cg5cx51.jpg)](/images/cache/66rci2cg5cx51.jpg)
