--- a/content/posts/2020-11-21-rotf-remix-the-inkwell-taphouse-termalaine.mdx
+++ b/content/posts/2020-11-21-rotf-remix-the-inkwell-taphouse-termalaine.mdx
@@ -5,7 +5,7 @@ date: '2020-11-21'
 excerpt: >-
   Decrepit roadside brewery turned ad hoc library battlemap, with a damp,
   coughing halfling keeper and research granting advantage on local lore checks.
-featured_image: /images/optionalrule-exploring-encumbered.webp
+featured_image: /images/cache/awg4bpr3st961.jpg
 draft: false
 showToc: false
 tags:
@@ -25,4 +25,4 @@ Library users have advantage on any Intelligence based skill checks involving lo
 
 I created this map using [DungeonDraft](https://dungeondraft.net/) for use in my version of Rime of the Frostmaiden.
 
-[![Battlemap of a small tavern and snowly streets. Inside maps and books litter the tables.](https://i.redd.it/awg4bpr3st961.jpg)](https://i.redd.it/awg4bpr3st961.jpg)
+[![Battlemap of a small tavern and snowly streets. Inside maps and books litter the tables.](/images/cache/awg4bpr3st961.jpg)](/images/cache/awg4bpr3st961.jpg)
