--- a/content/posts/2020-11-28-winter-camp-map.mdx
+++ b/content/posts/2020-11-28-winter-camp-map.mdx
@@ -5,7 +5,7 @@ date: '2020-11-28'
 excerpt: >-
   Snowy campsite battlemap for Rime of the Frostmaiden: a 25x25 grid at 5 ft per
   100 px, ideal for random encounters and quick drop-in play.
-featured_image: /images/optionalrule-escaping-wound.webp
+featured_image: /images/cache/1f1t9adlst961.jpg
 draft: false
 showToc: false
 tags:
@@ -17,4 +17,4 @@ tags:
 
 I created this map for a camp based random encounter from my Rime of the Frostmaiden campaign using [DungeonDraft](https://dungeondraft.net/).  It's a standard 25x25 battlemap with five feet distance per 100 px. I hope you'll get some use out of this for your game too.
 
-[![Battlemap of a snowly field with a small camp setup.](https://i.redd.it/1f1t9adlst961.jpg)](https://i.redd.it/1f1t9adlst961.jpg)
+[![Battlemap of a snowly field with a small camp setup.](/images/cache/1f1t9adlst961.jpg)](/images/cache/1f1t9adlst961.jpg)
