--- a/content/posts/2020-12-09-rime-of-the-frostmaiden-remixes.mdx
+++ b/content/posts/2020-12-09-rime-of-the-frostmaiden-remixes.mdx
@@ -17,7 +17,7 @@ tags:
 
 Remixes have become a great way for DMs to talk about how they are using published content in the wild for their actual 5th edition games. It focuses on how you arrange or change the elements to suit your individual game and style, and avoids the o-so-very-internet thing of labeling things as broken or awesome.
 
-I am currently running a [D&D Icewind Dale: Rime of the Frostmaiden](https://dnd.wizards.com/products/tabletop-games/rpg-products/icewind-dale-rime-frostmaiden) campaign and I'm enjoying it very much. I like the module, I think it has great atmosphere and an interesting take on pacing and the adventure as a whole. The module has taken a lot of heat for things like balance, pacing, editing, etc, and all the things people love to complain about online. I have to say that I think these concerns and complaints are significantly overblow, a number of people are now running this module and it seem to be working out for them. 
+I am currently running a **D&D Icewind Dale: Rime of the Frostmaiden** campaign and I'm enjoying it very much. I like the module, I think it has great atmosphere and an interesting take on pacing and the adventure as a whole. The module has taken a lot of heat for things like balance, pacing, editing, etc, and all the things people love to complain about online. I have to say that I think these concerns and complaints are significantly overblow, a number of people are now running this module and it seem to be working out for them. 
 
 _The key to realize is that most of the things people complain need work in the module, are things I would have changed in the module anyway._
 
