--- a/content/posts/2020-12-24-rotf-remix-lake-monster.mdx
+++ b/content/posts/2020-12-24-rotf-remix-lake-monster.mdx
@@ -46,7 +46,7 @@ If the PCs spend some time questing the townsfolk they can roll Charisma (Invest
 
 ## Unsafe Waters
 
-![A rustic town forzen in ice.](https://media.dndbeyond.com/compendium-images/idrotf/7Av7Gi2DxDtdzZPt/01-006.monster.png)
+![A rustic town forzen in ice.](/images/cache/01-006.monster.png)
 
 
 This encounter runs much as it does in the module with additions or modifications listed here. I recommend not depending on the late events table, unless your group would enjoy that sort of thing, and instead moving to an encounter with the plesiosaur after a few hours on the water. The beast will begin by ramming and pushing the boat (see Plesiosaurus Behavior option 2 in the module), this continues for several minutes, if the players attack the creature it responds in kind (moving to Plesiosaurus Behavior option 3 in the module). If the creature takes more than half it's hitpoints in damage, it swims away. Players may be surprised that it speaks in a pleading tone as it departs, &#8220;Please, just go away!&#8221;. If somehow, the players can get the creatures attention
