--- a/content/posts/2021-01-04-rotf-remix-heart-of-winter-supernatural-regions.mdx
+++ b/content/posts/2021-01-04-rotf-remix-heart-of-winter-supernatural-regions.mdx
@@ -21,7 +21,7 @@ Arcane scholars suspect casting of spells such as Control Weather, Magnificent M
 
 ## The Heart of Winter Supernatural Region
 
-![A rustic town forzen in ice.](https://media.dndbeyond.com/compendium-images/idrotf/7Av7Gi2DxDtdzZPt/00-001.png)
+![A rustic town forzen in ice.](/images/cache/00-001.png)
 
 
 Consider rolling on the Heart of Winter Magical Effects table when the following circumstances occur in one of these regions. 
