--- a/content/posts/2021-01-04-rotf-remix-the-far-north-ten-towns.mdx
+++ b/content/posts/2021-01-04-rotf-remix-the-far-north-ten-towns.mdx
@@ -17,7 +17,7 @@ tags:
 
 The Ten-Towns of [Icewind Dale: Rime of the Frostmaiden](https://dnd.wizards.com/products/tabletop-games/rpg-products/icewind-dale-rime-frostmaiden) provide rich plot, roleplaying, and excellent modular encounters for your 5th edition Dungeons and Dragons game. These early adventures setup the core tension of the adventure, and provide some of the most obvious ways to allow heroes make an impact on the region. What follows here are a few updates, changes, or additions to Ten-Towns to spice up your sessions in different ways. The factions section below provide a bit more political context to the adventure, the Sacrifices to Auril section provides a bit more background and context for the dangers faced and how each town is adapting, the Winter Survival Gear and Travel section enhance the survival mechanics in the setting. Like any remix, this is just a skew toward a specific style of running the game, use what you find useful and ignore the rest. Many of these core components setup remixes for individual encounters I will post over time.
 
-![A rustic town forzen in ice.](https://media.dndbeyond.com/compendium-images/idrotf/7Av7Gi2DxDtdzZPt/01-001.easthaven.png)
+![A rustic town forzen in ice.](/images/cache/01-001.easthaven.png)
 
 ## Access to Icewind Dale
 
