Adjusted featured image links for cached images.

--- a/content/posts/2021-01-04-rotf-remix-heart-of-winter-supernatural-regions.mdx
+++ b/content/posts/2021-01-04-rotf-remix-heart-of-winter-supernatural-regions.mdx
@@ -5,7 +5,7 @@ date: '2021-01-04'
 excerpt: >-
   Introduce volatile planar cold zones in Icewind Dale with triggers and a d100
   table of chilling effects to reshape rests, spells, and encounters.
-featured_image: /images/optionalrule-escaping-wound.webp
+featured_image: /images/cache/00-001.png
 draft: false
 showToc: false
 tags:
