--- a/content/posts/2021-01-04-rotf-remix-the-far-north-ten-towns.mdx
+++ b/content/posts/2021-01-04-rotf-remix-the-far-north-ten-towns.mdx
@@ -5,7 +5,7 @@ date: '2021-01-04'
 excerpt: >-
   Remix adds Icewind Dale politics and Duergar intrigue, caravan hooks, harsher
   travel and survival rules, and darker Auril sacrifices for 5e.
-featured_image: /images/optionalrule-exploring-wizard.webp
+featured_image: /images/cache/01-001.easthaven.png
 draft: false
 showToc: false
 tags:
