--- a/content/posts/2021-01-12-rotf-remix-foaming-mugs.mdx
+++ b/content/posts/2021-01-12-rotf-remix-foaming-mugs.mdx
@@ -6,8 +6,7 @@ excerpt: >-
   Remix this Icewind Dale side quest with an inside-job twist, a yeti-lured
   ambush, goblin negotiations, a haunted locale, and a secret crime-boss
   stinger.
-featured_image: /images/optionalrule-exploring-wizard.webp
-draft: false
+featured_image: /images/cache/00-004.yeti-splash.png
 showToc: false
 tags:
   - DnD 5e
