--- a/content/posts/2021-02-25-the-zen-of-awarding-experience-for-roleplaying.mdx
+++ b/content/posts/2021-02-25-the-zen-of-awarding-experience-for-roleplaying.mdx
@@ -5,7 +5,7 @@ date: '2021-02-25'
 excerpt: >-
   A simple system scores social encounters by stakes and change, maps them to CR
   vs party level, and awards shared XP to encourage noncombat play.
-featured_image: /images/optionalrule-escaping-wound.webp
+featured_image: /images/RPDifficulties-480x319.jpg
 draft: false
 showToc: false
 tags:
