--- a/content/posts/2020-12-24-rotf-remix-lake-monster.mdx
+++ b/content/posts/2020-12-24-rotf-remix-lake-monster.mdx
@@ -5,7 +5,7 @@ date: '2020-12-24'
 excerpt: >-
   A Frostmaiden quest remix: an awakened plesiosaur coerced by frost druids
   menaces Bremen, with investigation hooks, parley options, and a cave assault.
-featured_image: /images/optionalrule-exploring-wizard.webp
+featured_image: /images/cache/01-006.monster.png
 draft: false
 showToc: false
 tags:
@@ -15,7 +15,7 @@ tags:
   - DM Advice
 ---
 
-This post contains the remixes and changes I used for the Lake Monster quest picked up in the town of Bremen in [Icewind Dale: Rime of the Frostmaiden](https://dnd.wizards.com/products/tabletop-games/rpg-products/icewind-dale-rime-frostmaiden). It runs similarly to what is written in the module with a different backstory, delivery and climax. You can likely use this remix as an independent encounter in any game, but to get the most out of it you will need the module.
+This post contains the remixes and changes I used for the Lake Monster quest picked up in the town of Bremen in **Icewind Dale: Rime of the Frostmaiden**. It runs similarly to what is written in the module with a different backstory, delivery and climax. You can likely use this remix as an independent encounter in any game, but to get the most out of it you will need the module.
 
 Contains some spoilers for the Lake Monster question in Rime of the Frostmaiden. The content focuses on new or changed materials but comments may imply spoilers.
 
