--- a/content/pages/about.mdx
+++ b/content/pages/about.mdx
@@ -1,60 +1,24 @@
 ---
 title: "About"
-description: "Learn more about this blog and its mission to share knowledge about modern web development, best practices, and emerging technologies."
+date: "2021-07-14"
+featured_image: "/images/optionalrule_lazydm.jpg"
+description: >
+    Optional Rule Games creates flexible, fun TTRPG content for players 
+    and GMs, inspiring exciting adventures at your table.
+showToc: false
 ---
+**Optional Rule Games** is a small self publisher dedicated to building flexible content that enables actual play in a fun and exciting way for Players and Game Masters alike.
 
-# About This Blog
+![That's my face!](/images/optionalrule_lazydm.jpg)
 
-Welcome to our corner of the web development universe! This blog is dedicated to sharing insights, best practices, and practical knowledge about modern web technologies.
+I post game content for use with various Tabletop RPG systems, primarily 5th Edition Dungeons & Dragons. I hope you&#8217;ll find some of it interesting or useful and get out there and run games of your own. I&#8217;ve been playing Tabletop RPGs for almost 40 years and have no intention of stopping now. Currently I&#8217;m running a lot of 5th Edition D&D, but I enjoy and have created content for a number of systems in the past. Other TTRPGs I greatly enjoy are Burning Wheel, Traveller, Stars Without Number, Blades in the Dark, Vampire the Masquerade, Fate, Dungeon World, Harn, Cyberpunk, Call of Cthulhu, Shadowrun, and many more. 
 
-## Our Mission
+Always remember, _the only thing that isn&#8217;t optional &#8230; is fun._
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+Subscribe to the feed for regular content updates and please share anything you find useful. Send me feedback via twitter other other platforms as well.
 
-### What You'll Find Here
+Follow me on social media and and please feel free to reach out and comment, I love to foster a discussion with positively focused gamers.
 
-- **In-depth Tutorials**: Comprehensive guides on modern web frameworks
-- **Best Practices**: Battle-tested approaches to common development challenges  
-- **Technology Reviews**: Honest assessments of new tools and libraries
-- **Code Examples**: Practical, real-world implementations you can use
+### X
 
-## Our Approach
-
-Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-
-We believe in:
-
-1. **Practical Learning**: Every tutorial includes working code examples
-2. **Best Practices**: We don't just show you how, but why it's the right way
-3. **Community Focus**: Learning together makes us all better developers
-4. **Continuous Learning**: Technology evolves, and so do we
-
-## Topics We Cover
-
-### Frontend Development
-- React & Next.js
-- TypeScript
-- Modern CSS & Styling
-- Performance Optimization
-
-### Backend Development  
-- Node.js & API Design
-- Database Integration
-- Authentication & Security
-- Deployment Strategies
-
-### Developer Experience
-- Tooling & Workflows
-- Testing Strategies  
-- Code Quality
-- Team Collaboration
-
-## Get Involved
-
-Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
-
-Feel free to reach out with suggestions, questions, or just to say hello. We're always excited to connect with fellow developers and learn from your experiences.
-
----
-
-*This blog is built with Next.js, TypeScript, and deployed on GitHub Pages. You can find the source code on GitHub.*
+This is my main source for comments so tag me there or drop me a DM if you have a question.
