Added some links to post

--- a/content/posts/2025-08-15-site-migration-complete.mdx
+++ b/content/posts/2025-08-15-site-migration-complete.mdx
@@ -7,11 +7,11 @@ featured_image: "/images/lighthouse_site_migration_20250815.webp"
 draft: false
 showToc: false
 ---
-I just completed a migration of the site from the previous Jekyll framework to a custom NextJS site, still publishing on GitHub Pages as usual. It was an interesting experience migrating the site, and I thought it was worth sharing because it hints at the flexibility TTRPG content creators will have in the AI era. Although I haven't been very active here lately, I hope to get back to it a bit. The shenanigans of 5e and the general dip in the hobby haven't had me excited enough to write about anything, but that's starting to change.
+I just completed a migration of the site from the previous [Jekyll](https://jekyllrb.com/) framework to a custom [NextJS](https://nextjs.org/) site, still publishing on [GitHub Pages](https://pages.github.com/) as usual. It was an interesting experience migrating the site, and I thought it was worth sharing because it hints at the flexibility TTRPG content creators will have in the AI era. Although I haven't been very active here lately, I hope to get back to it a bit. The shenanigans of 5e and the general dip in the hobby haven't had me excited enough to write about anything, but that's starting to change.
 
 ## A bit of Housekeeping
 
-First, I removed some of the older content rather than migrating it. Things like old giveaways, notifications of livestreams long past, and so on. No real reason to bring those forward. I can't imagine anyone is looking for them, but I'm usually a bit of a fanatic about "Cool URIs Never Change," so I feel a little sheepish. Anyway, it's done.
+First, I removed some of the older content rather than migrating it. Things like old giveaways, notifications of livestreams long past, and so on. No real reason to bring those forward. I can't imagine anyone is looking for them, but I'm usually a bit of a fanatic about "[Cool URIs Don't Change](https://www.w3.org/Provider/Style/URI.html)" so I feel a little sheepish. Anyway, it's done.
 
 The URLs should stay the same after the migration. Jekyll was a bit sloppy in how it handled slugs, so it's possible a few dates were wrong, but I think I got them all. If I notice 404s, I'll figure out a fix and get them back. I should also be adding a search feature back soon so people can find things more easily.
 
@@ -29,7 +29,7 @@ I am a career software engineer with fair enough skills, but I decided to migrat
 
 In just a few days, and with very light knowledge of NextJS and React, I had AI implement all of the features of Jekyll and more. That included layout and theme, plus the very tedious and time-consuming work of porting the 120+ posts from Markdown/Liquid to MDX. This is something that would have taken me weeks of tinkering around in my spare time.
 
-Granted, I have a lot of experience in general with software development, even if I don't know NextJS and React specifically. However, any switch is a bit time-consuming. I mostly used Cursor, Claude CLI, and Codex, and it worked very well.  
+Granted, I have a lot of experience in general with software development, even if I don't know NextJS and React specifically. However, any switch is a bit time-consuming. I mostly used [Cursor](https://www.cursor.com/), [Claude CLI](https://www.anthropic.com/docs/claude-cli), and [Codex](https://chatgpt.com/codex/) , and it worked very well.  
 
 The point we're at now, a TTRPG fan with a basic set of command line skills and vague familiarity with coding can make something fairly neat. It even costs me nothing to host since it's on GitHub Pages. It's only going to get easier and better from here on out, and I hope more TTRPG fans will start to take advantage of that.
 
