--- a/content/posts/2025-08-22-retro-classic-game-asteroids-available.mdx
+++ b/content/posts/2025-08-22-retro-classic-game-asteroids-available.mdx
@@ -1,18 +1,22 @@
 ---
-slug: "retro-classic-game-asteroids-available"
-title: "Retro-Classic Game Asteroids Available"
-date: "2025-08-22"
-excerpt: "A brief description of your post that will appear in previews and summaries."
-tags: ["tag1","tag2","tag3"]
-featured_image: "/images/interactive/asteroids-splashscreen.webp"
+slug: retro-classic-game-asteroids-available
+title: Retro-Classic Game Asteroids Available
+date: '2025-08-22'
+featured_image: /images/interactive/asteroids-splashscreen.webp
 draft: false
 showToc: false
+excerpt: >-
+  I developed a browser version of Asteroids, sharing my high score hopes while
+  exploring TTRPG tools post-site conversion.
+tags:
+  - Community
+  - Philosophy
 ---
-As a fun side project, I developed a version of the retro-classic game [Asteroids](/game/asteroids/) that you can play here on the site in your browser. Asteroids is absolutely one of my all-time favorite early arcade games, and I’m really enjoying having it live on the site. I hope you do too!
+As a fun side project, I developed a version of the retro-classic game [Asteroids](/games/asteroids/) that you can play here on the site in your browser. You can also find it under the Games section of the site and future games will be added there too. Asteroids is absolutely one of my all-time favorite early arcade games, and I’m really enjoying having it live on the site. I hope you do as well!
 
 Make sure to share your high score on [X](https://x.com/optionalrule)!
 
-After porting the site over to NextJS from Jekyll, I’ve been planning to implement some TTRPG tools and other interactive content. This project also gave me a chance to dive deeper into the various CLI coding tools available today, and it turned out to be a great low-stakes experiment. Despite that, I’m really happy with how it came together and look forward to building other tools, maybe even a few mini-games, either to support your table or just for fun.
+After porting the site over to **NextJS** from Jekyll, I’ve been planning to implement some TTRPG tools and other interactive content. This project also gave me a chance to dive deeper into the various **CLI coding tools** available today, and it turned out to be a great low-stakes experiment. Despite that, I’m really happy with how it came together and look forward to building other tools, maybe even a few mini-games, either to support your table or just for fun.
 
 As an aside to any tool developer considering AI programming tools for TTRPG projects, we’re at an interesting point. It’s hard to give definitive advice. If you have a solid background in IT, you’ll likely find these tools very useful. Without that experience, though, they can be frustrating. It takes practice to describe what you want clearly and even more skill to guide the tools back on track once they drift. That said, it doesn’t take massive expertise, just some awareness and patience. So, if you’re curious, give it a try with your eyes open.
 
