Added note about game state to blog post.

--- a/content/posts/2025-08-22-retro-classic-game-asteroids-available.mdx
+++ b/content/posts/2025-08-22-retro-classic-game-asteroids-available.mdx
@@ -16,6 +16,8 @@ As a fun side project, I developed a version of the retro-classic game [Asteroid
 
 Make sure to share your high score on [X](https://x.com/optionalrule)!
 
+> **Note:** I like the state of the game but will plan on adding a few more features in the future.  So expect to see an alien ship or two in the future. Also, some options for extra lives too.  Because of the key controls it *only works on desktop*.
+
 After porting the site over to **NextJS** from Jekyll, I’ve been planning to implement some TTRPG tools and other interactive content. This project also gave me a chance to dive deeper into the various **CLI coding tools** available today, and it turned out to be a great low-stakes experiment. Despite that, I’m really happy with how it came together and look forward to building other tools, maybe even a few mini-games, either to support your table or just for fun.
 
 As an aside to any tool developer considering AI programming tools for TTRPG projects, we’re at an interesting point. It’s hard to give definitive advice. If you have a solid background in IT, you’ll likely find these tools very useful. Without that experience, though, they can be frustrating. It takes practice to describe what you want clearly and even more skill to guide the tools back on track once they drift. That said, it doesn’t take massive expertise, just some awareness and patience. So, if you’re curious, give it a try with your eyes open.
