--- a/content/posts/2025-09-12-kcd2-alchemy-tool-and-nostalgia-for-ttrpg-crafting.mdx
+++ b/content/posts/2025-09-12-kcd2-alchemy-tool-and-nostalgia-for-ttrpg-crafting.mdx
@@ -8,19 +8,34 @@ featured_image: "/images/optionalrule-escaping-wound.webp"
 draft: false
 showToc: false
 ---
-
-Enhance and edit this post announcing the new tool I'd developed on OptionalRule.com and reflections on game design.
-
-I've put up a new tool on the site to view, filter, and search Alchemy Reciepies for the game Kingdom Come Deliverance 2.  As a hard core fan of history and gritty or "realistic" TTRPGs like Harn or Pendragon, KCD2 is the kind of game I particularly enjoy.  I'm diving back in with the release of the new Forge DLC and wanted a better experience with potion crafting so I created this tool. It also got me thinking about TTRPG Design how crafting is handled, so in the tradition of creating content nobody cares about, I thought I'd write a post about it.
+I've put up a new tool on the site to view, filter, and search alchemy recipes for the game Kingdom Come: Deliverance 2. As a hardcore fan of history and gritty or "realistic" TTRPGs like Harn or Pendragon, KCD2 is the kind of game I particularly enjoy. I'm diving back in with the release of the new Forge DLC and wanted a better experience with potion crafting, so I created this tool. It also got me thinking about TTRPG design and how crafting is handled, so in the tradition of creating content nobody cares about, I thought I'd write a post about it.
 
 # The KCD2 Alchemy Tool
 
-First, a bit about the tool. This isn't just a simple potion list. What this does is present recipies explained better, and designed to give you the best brewing results along with some other data.  The recipies were created by Omicron and I parsed those into data file and added some information like base value.  I mostly built it for myself so I can click through the ingredients I have and easily reference what potions I can make, and get the best instructions on how to make them.  Kind of a digital version of the tome of knowlege.  
+First, a bit about the tool. This isn't just a simple potion list. What this does is present recipes explained better and designed to give you the best brewing results, along with some other data. The recipes were created by Omicron, and I parsed those into a data file and added information like base value. I mostly built it for myself so I can click through the ingredients I have and easily reference what potions I can make, and get the best instructions on how to make them. Kind of a digital version of the Tome of Knowledge.
 
-It has some other features like presenting optimized recipies when your skill is high enough to save time.  It also lets you save your view (locally) so you don't have to enter all that data again.  Anyway, I hope you find it useful.
+It has some other features like presenting optimized recipes when your skill is high enough to save time. It also lets you save your view (locally) so you don't have to enter all that data again. Anyway, I hope you find it useful.
 
 ## TTRPG Potion Nostalgia
 
-Playing KCD2 makes me pine for a lot of the old school wonder I had in earlier TTRPGs.  In particular, the fun of the potion mini-game reminded me of the earliest edition of the AD&D DMG.  The back of that book included all sorts of references, including a reference on herbs and their effects. Appropos of a lot of early AD&D information, it was pretty much usless and had little, if any, in game use.  That didn't matter though because gaming then was a bit more of an imaginative experience and, unrealitic as the design was, most of use found our thoughts swirling around what a fantasy medieval world would be like. So "fluff" like the herb or potions lists was great fodder for sitting in your room and pouring through the DMG for the 100th time to discover something new or interesting.  
+Playing KCD2 makes me pine for a lot of the old-school wonder I had in earlier TTRPGs. In particular, the fun of the potion mini-game reminded me of the earliest edition of the AD&D DMG. The back of that book included all sorts of references, including a reference on herbs and their effects. Apropos of a lot of early AD&D information, it was pretty much useless and had little, if any, in-game use. That didn't matter though, because gaming then was a bit more of an imaginative experience and, unrealistic as the design was, most of us found our thoughts swirling around what a fantasy medieval world would be like. So "fluff" like the herb or potion lists was great fodder for sitting in your room and poring through the DMG for the 100th time to discover something new or interesting.
 
-Of course, nostalgia isn't what it used to be and that fond memory is really more an artifact of having no internet and being bored.  Stil though, it did create space for the mind to wonder and I've retained some of the yearning to build that vision of TTRPGs in my mind. 
+Of course, nostalgia isn't what it used to be, and that fond memory is really more an artifact of having no internet and being bored. Still though, it did create space for the mind to wander, and I've retained some of that yearning to build that vision of TTRPGs in my mind.
+
+## The Missing Ingredients in TTRPG Design
+
+It's fair to say that making crafting fun in a TTRPG has always been a challenge, but modern game design has made this worse than ever. The first thing to realize is that the process of crafting was never really the interesting part in a TTRPG. Crafting was just one of many pathways players could use to advance their character. This concept of multiple pathways of advancement is really what modern TTRPGs have gotten wrong.
+
+Let me explain.
+
+Modern TTRPGs bundle everything into the character and their abilities. In D&D, this specifically means class abilities, but the entire shift toward narrative and character-focused games has led to this design principle being the norm. This isn't to say character-focused games are bad, but when you place everything in automatically obtained character abilities, you remove the need for the player to engage with the world and use their ambition to grow.
+
+**Focusing on character agency decreases the need for player agency.** This is a bad thing for games.
+
+To understand what I mean, you have to look at earlier TTRPG assumptions and game design. If characters were to get better, it was assumed in early games that means a little bit came from the advancement system (like HP and bonuses), a bit came from finding magic items to add new abilities, a bit from alliances built through roleplay, and a bit more from doing things like foraging for herbs or crafting potions. The mix of these different pillars worked well together, with class abilities providing a baseline of proficiency, but the real advancement and most unique options came out of the active decision-making by the players to seek treasure or craft items. In these kinds of games, classes worked particularly well because you still had a lot of variation due to items and other factors. In today's games, a class is a class is a class.
+
+So all the focus has shifted in modern design toward just advancing. Often that advancement is coming no matter what the outcome of player actions are, so why bother with things like foraging or crafting items? Why spend any game time on it, and what tension could it possibly create?
+
+Yes, I know this is an awful lot of off-roading to just announce a small online tool to manage potion crafting in KCD2. Still though, I find I enjoy setting my character up for success with these systems in the game. That makes my mind turn back to the days when such things meant something in TTRPGs. Since gaming blogs are dying anyway, I thought I'd just jot down my thoughts.
+
+What are your thoughts? Do you find yourself enjoying things more in video games that you used to enjoy in TTRPGs? Do you still enjoy crafting in TTRPGs, and why? I'd love to hear your thoughts.
