article(blog): setting up article for alchemy post and tweaking enhancement script.

--- a/content/posts/2025-09-12-kcd2-alchemy-tool-and-nostalgia-for-ttrpg-crafting.mdx
+++ b/content/posts/2025-09-12-kcd2-alchemy-tool-and-nostalgia-for-ttrpg-crafting.mdx
@@ -1,20 +1,18 @@
 ---
 slug: "kcd2-alchemy-tool"
-title: "KCD2 Alchemy Tool and Nostalgia for TTRPG Crafting"
+title: "KCD2 Alchemy Tool and Why I Miss TTRPG Crafting"
 date: "2025-09-12"
-excerpt: "A brief description of your post that will appear in previews and summaries."
-tags: ["tag1","tag2","tag3"]
-featured_image: "/images/optionalrule-escaping-wound.webp"
+featured_image: "/images/alchemy_tool_and_crafting_nostalgia_1200x800.webp"
 draft: false
 showToc: false
 ---
-I've put up a new tool on the site to view, filter, and search alchemy recipes for the game Kingdom Come: Deliverance 2. As a hardcore fan of history and gritty or "realistic" TTRPGs like Harn or Pendragon, KCD2 is the kind of game I particularly enjoy. I'm diving back in with the release of the new Forge DLC and wanted a better experience with potion crafting, so I created this tool. It also got me thinking about TTRPG design and how crafting is handled, so in the tradition of creating content nobody cares about, I thought I'd write a post about it.
+I've put up a new tool on the site to view, filter, and search alchemy recipes for the game [Kingdom Come: Deliverance 2](https://www.deepsilver.com/games/kingdom-come-deliverance-ii). As a hardcore fan of history and gritty or "realistic" TTRPGs like Harn or Pendragon, KCD2 is the kind of game I particularly enjoy. I'm diving back in with the release of the new Forge DLC and wanted a better experience with potion crafting, so I created this tool. It also got me thinking about TTRPG design and how crafting is handled, so in the tradition of creating content nobody cares about, I thought I'd write a post about it.
 
-# The KCD2 Alchemy Tool
+## The KCD2 Alchemy Tool
 
-First, a bit about the tool. This isn't just a simple potion list. What this does is present recipes explained better and designed to give you the best brewing results, along with some other data. The recipes were created by Omicron, and I parsed those into a data file and added information like base value. I mostly built it for myself so I can click through the ingredients I have and easily reference what potions I can make, and get the best instructions on how to make them. Kind of a digital version of the Tome of Knowledge.
+First, a bit about my [KCD2 Alchemy Scholar](/tools/kcd2_alchemy/) tool. This isn't just a simple potion list. What this does is present recipes explained better and designed to give you the best brewing results, along with some other data. The recipes are from [Henry's Moste Potente Potions](https://github.com/Omricon/Henrys-Moste-Potente-Potions) created by Omicron, which are retooled to make sure players have better descriptions to create the most powerful potions. I parsed those into a data file and added information like base value and will be adding additional data over time. I mostly built it for myself so I can click through the ingredients I have and easily reference what potions I can make, and get the best instructions on how to make them. Kind of a digital version of the Tome of Knowledge.
 
-It has some other features like presenting optimized recipes when your skill is high enough to save time. It also lets you save your view (locally) so you don't have to enter all that data again. Anyway, I hope you find it useful.
+It has some other features like presenting optimized recipes when your skill is high enough to save time. It also lets you save your view (locally) so you don't have to enter all that data again. Anyway, I hope you find it useful. If you do, please give it a share and let me know what you think on X. Also let me know if you have any suggestions.
 
 ## TTRPG Potion Nostalgia
 
@@ -30,12 +28,18 @@ Let me explain.
 
 Modern TTRPGs bundle everything into the character and their abilities. In D&D, this specifically means class abilities, but the entire shift toward narrative and character-focused games has led to this design principle being the norm. This isn't to say character-focused games are bad, but when you place everything in automatically obtained character abilities, you remove the need for the player to engage with the world and use their ambition to grow.
 
-**Focusing on character agency decreases the need for player agency.** This is a bad thing for games.
+> ***Focusing on character agency decreases the need for player agency.*** 
+
+This is a bad thing for games.
 
 To understand what I mean, you have to look at earlier TTRPG assumptions and game design. If characters were to get better, it was assumed in early games that means a little bit came from the advancement system (like HP and bonuses), a bit came from finding magic items to add new abilities, a bit from alliances built through roleplay, and a bit more from doing things like foraging for herbs or crafting potions. The mix of these different pillars worked well together, with class abilities providing a baseline of proficiency, but the real advancement and most unique options came out of the active decision-making by the players to seek treasure or craft items. In these kinds of games, classes worked particularly well because you still had a lot of variation due to items and other factors. In today's games, a class is a class is a class.
 
 So all the focus has shifted in modern design toward just advancing. Often that advancement is coming no matter what the outcome of player actions are, so why bother with things like foraging or crafting items? Why spend any game time on it, and what tension could it possibly create?
 
-Yes, I know this is an awful lot of off-roading to just announce a small online tool to manage potion crafting in KCD2. Still though, I find I enjoy setting my character up for success with these systems in the game. That makes my mind turn back to the days when such things meant something in TTRPGs. Since gaming blogs are dying anyway, I thought I'd just jot down my thoughts.
+I know there is some interest still in crafting and particularly brewing potions, because one of my most popular posts is my [Summary of 5e Alchemy Rules](/2021/01/24/summary-of-5e-alchemy-rules/)
 
-What are your thoughts? Do you find yourself enjoying things more in video games that you used to enjoy in TTRPGs? Do you still enjoy crafting in TTRPGs, and why? I'd love to hear your thoughts.
+Yes, I know this is an awful lot of off-roading to just announce a small online tool to manage potion crafting in KCD2. Still though, I find I enjoy setting my character up for success with these systems in the game. That makes my mind turn back to the days when such things meant something in TTRPGs. Maybe that's why KCD2's alchemy system resonates with me so much. It requires actual player engagement - gathering ingredients, learning recipes, mastering the timing. It's not just clicking a button and watching a progress bar. It reminds me of what we've lost in the shift to streamlined TTRPG design. Sure, modern games are more accessible and narrative-focused, but sometimes I miss needing to actually work for my character's abilities instead of just leveling up.
+
+Heck, I've even started drinking Nettle Tea again because of it!
+
+What are your thoughts? Have you found modern TTRPGs that still capture this sense of earned progression? How do you handle crafting in your games? Or am I just a grognard romanticizing tedious bookkeeping? Hit me up on X and let me know!
