post: edit tweaks and testing build.

--- a/content/posts/2025-09-12-kcd2-alchemy-tool-and-nostalgia-for-ttrpg-crafting.mdx
+++ b/content/posts/2025-09-12-kcd2-alchemy-tool-and-nostalgia-for-ttrpg-crafting.mdx
@@ -6,7 +6,7 @@ featured_image: "/images/alchemy_tool_and_crafting_nostalgia_1200x800.webp"
 draft: false
 showToc: false
 ---
-I've put up a new tool on the site to view, filter, and search alchemy recipes for the game [Kingdom Come: Deliverance 2](https://www.deepsilver.com/games/kingdom-come-deliverance-ii). As a hardcore fan of history and gritty or "realistic" TTRPGs like Harn or Pendragon, KCD2 is the kind of game I particularly enjoy. I'm diving back in with the release of the new Forge DLC and wanted a better experience with potion crafting, so I created this tool. It also got me thinking about TTRPG design and how crafting is handled, so in the tradition of creating content nobody cares about, I thought I'd write a post about it.
+I've put up a [new interactive tool](/tools/kcd2_alchemy/) on the site to view, filter, and search alchemy recipes for the game [Kingdom Come: Deliverance 2](https://www.deepsilver.com/games/kingdom-come-deliverance-ii). As a hardcore fan of history and gritty or "realistic" TTRPGs like Harn or Pendragon, KCD2 is the kind of game I particularly enjoy. I'm diving back in with the release of the new Forge DLC and wanted a better experience with potion crafting, so I created this tool. It also got me thinking about TTRPG design and how crafting is handled, so in the tradition of creating content nobody cares about, I thought I'd write a post about it.
 
 ## The KCD2 Alchemy Tool
 
