post: Added tags and excerpt to solo play article.

--- a/content/posts/2025-09-20-the-surprising-history-of-solo-ttrpg-play.mdx
+++ b/content/posts/2025-09-20-the-surprising-history-of-solo-ttrpg-play.mdx
@@ -1,12 +1,17 @@
 ---
-slug: "the-surprising-history-of-solo-ttrpg-play"
-title: "The Surprising History of Solo TTRPG Play"
-date: "2025-09-20"
-excerpt: "A brief description of your post that will appear in previews and summaries."
-tags: ["tag1","tag2","tag3"]
-featured_image: "/images/optionalrule-escaping-wound.webp"
+slug: the-surprising-history-of-solo-ttrpg-play
+title: The Surprising History of Solo TTRPG Play
+date: '2025-09-20'
+featured_image: /images/optionalrule-escaping-wound.webp
 draft: false
 showToc: false
+excerpt: >-
+  Solo TTRPG play has been part of the hobby since the 1970s, serving as
+  practice space, a creative engine with oracles, and now evolving with AI.
+tags:
+  - Analysis
+  - RPG Resources
+  - Shadowdark
 ---
 When I first sat down to write about using AI for solo play, I thought I’d just throw in a little background. Quick context, nothing major. Instead I got lost in the steam tunnels of TTRPG history with a treasure trove of nostalgic memories. Although people tend to view solo friendly systems as a new thing in the hobby, the truth is, it has been here since the beginning.
 
