chore: Adjusted typography themes

--- a/content/posts/2023-06-02-what-are-hit-points-in-dnd.mdx
+++ b/content/posts/2023-06-02-what-are-hit-points-in-dnd.mdx
@@ -20,12 +20,9 @@ It's no surprise that understanding HP often seems like trying to learn Draconic
 
 ![Text on HP from the original DnD book.](/images/hitpoints/ODnD_p18_480.png)
 
-
 ![Text on HP from AD&D.](/images/hitpoints/1stEditionDnD480.png)
 
-
 ![Text on HP from 2nd Edition AD&D.](/images/hitpoints/2ndEditionDnD480.png)
-
 
 ![Text on HP from 5E D&D.](/images/hitpoints/5thEditionDnD480.png)
 
@@ -35,7 +32,7 @@ Many D&D elements, including HP, sprung from the hobby's wargaming roots. In tho
 
 In OD&D, AC denoted how challenging you were to hit, and HP showed how close you were to defeat. The game simply states, "Your hit points determine how hard your character is to kill." And that's it. That's the HP origin story. They're an arbitrary, abstract measurement of how difficult you are to kill and how far along the game is in achieving that.
 
-## The Evolution of HP
+### The Evolution of HP
 
 Later D&D editions got increasingly philosophical about HP. Advanced D&D acknowledged physical punishment, but clarified that "a significant portion of hit points, especially at higher levels, stands for skill, luck, and/or magical factors." It even said it would be "ridiculous" to assume characters could endure such physical punishment, further emphasizing that HP are not intended to be taken literally.
 
@@ -43,13 +40,13 @@ Later D&D editions got increasingly philosophical about HP. Advanced D&D acknowl
 
 By the time 5th edition D&D came around, we're back in the abstract realm, with the game stating, "Hit Points represent a combination of physical and mental durability, the will to live, and luck."
 
-## Hit Points: Setting the Stage, Not defining the Genre
+### Hit Points: Setting the Stage, Not defining the Genre
 
 Hit Point mechanics are integral, but the presence of HP doesn't force your game into a specific genre. That job is for the Dungeon Master, who tailors how this mechanic comes into play. For instance, early D&D editions painted a grim, risky scene with low HP and tight damage thresholds, providing a sword-and-sorcery feel. In contrast, 5th Edition, with its generous HP pools and high-damage exploits, resonates with high-fantasy heroics.
 
 Remember, it's not the existence of HP that set these styles; it's their application. As the DM, you have the freedom to adjust this tool to shape your campaign's tone, from injecting grimdark elements into a 5th Edition game by reducing HP, to amping up the heroics in a 1st Edition game by increasing HP totals. At the end of the day, HP is a vital but flexible aspect of the D&D universe.
 
-## Hit Points: Tools, Not Shackles
+### Hit Points: Tools, Not Shackles
 
 It's crucial to remember that Hit Points are a mechanic, not a set of shackles for the DM. They have their boundaries and are not designed to simulate everything could befall a character. Every edition of D&D underscores this, suggesting that the DM delineates these limits.
 
