chore(content): Chipping away at darkness post opening.

--- a/content/posts/2025-09-30-shedding-light-on-darkness-in-dnd.mdx
+++ b/content/posts/2025-09-30-shedding-light-on-darkness-in-dnd.mdx
@@ -8,12 +8,17 @@ featured_image: "/images/optionalrule-exploring-wizard.webp"
 draft: true
 showToc: false
 ---
+Early D&D treated light as an important element of dungeon exploration.  It bounded the players world into a very tight space, where untold horrors lurked just beyond the edge of their light. Since hitpoints, potions, and other resources were scarce, managing light made the danger of what lurked in that darkness feel real. It was a vital part of building tension and atmosphere in early games and establishing the feeling of exploring a dangerous, unknown place. Most character races did not have darkvision, in fact darkvision didn't even exist and it was divided into low light vision that only worked outside, and infravision that only worked in the dark.
 
-## The Night is Not So Full of Terrors
+Contributing to the sense of danger and uncertainty, light was a resource that could be lost or stolen, Players had to be careful about how they used it as it could easily alert monsters to their presence. Light sources were treated like an important resources like rope, rations, and hit points. You tracked it, protected it, and planned around it. Infravision was finicky heat-sense, not a free flashlight, so even stout dwarves needed flame to read a map or notice a tripwire. Low-light vision only worked outside and the rest of the party was literally "left in the dark".
 
-Early D&D treated light like rope, rations, and hit points. You tracked it, protected it, and planned around it. Infravision was finicky heat-sense, not a free flashlight, so even stout dwarves needed flame to read a map or notice a tripwire. The edge of the torch defined the edge of the world. That circle shrank with every turn.
+The edge of the torch defined the edge of the world. That circle shrank with every turn.
 
-Modern tables often skip that pressure. 5e hands out darkvision widely and many groups run it as “see normally, in gray.” The rules do not support that shortcut. Dim light is lightly obscured and should worsen sight-based Perception. Total darkness blinds creatures without help. Even a hero with darkvision sees fewer details and misses color and fine texture outside bright light. When those nuances are ignored, darkness stops hiding anything interesting, exploration flattens, and dungeons lose bite.
+Modern tables often skip that pressure. 5e hands out darkvision widely and many groups run it as “see normally, in gray.” The rules do not support that shortcut, but most tables can't be bothered with the distinction and they are leaving a key tool of creating in game tension "on the table".  That being said, it's fair to say that the rules-as-written in 5e water down the fear of the dark.This takes that night, which should be dark and full of dangers, and makes it a minor annoyance at best.
+
+We're losing something important when we treat light as a non-issue. This article offers a toolkit to make light matter again. You can pick and choose from these ten options to fit your table's style. The goal is to make light a resource that shapes exploration, forces choices, and makes the dungeon feel actively hostile when the party's lights go out. OSR and OSR-adjacent games have leaned into this for decades. 5e can too, with a few tweaks and a little bookkeeping. I think a small bit of resource tracking can be a good thing, but it has to mean something. Watching a resource dwindle should raise some level of anxiety and tension, and players should even occasionally have to make hard choices about how to manage it.
+
+This is key to engaging players, and making them feel like their choices matter and giving them more agency. If they can just ignore the dark, then it becomes a non-issue, and the game loses a lot of its tension and excitement.
 
 ## What We Lost When Light Became Free
 
