More article tweaking

--- a/content/posts/2025-09-30-shedding-light-on-darkness-in-dnd.mdx
+++ b/content/posts/2025-09-30-shedding-light-on-darkness-in-dnd.mdx
@@ -30,6 +30,8 @@ Old-school referees leaned into this. “Strict time records” meant torches ex
 
 Shadowdark RPG packages that older energy for modern play. No one starts with darkvision. Light is finite. The Light spell lasts an hour. When the party’s lights go out, encounter pressure spikes and the dungeon becomes actively hostile. Many foes see in the dark. That asymmetry flips a lantern into a beacon and makes decisions around light feel meaningful again. If you want a concise look at why this works, start here: [Shadowdark RPG](https://www.thearcanelibrary.com/pages/shadowdark-rpg). For a sharp refresher on vision rules at the table, Angry GM’s piece is worth every minute: [Ask Angry: Seeing in the Dark](https://theangrygm.com/ask-angry-seeing-in-the-dark/).
 
+Shadowdark didn't invent these ideas. Starting with a deep appreciation for the kind of exiting adventures created by early D&D, it repackaged them for a new audience. You can too.
+
 ## A Practical Toolkit for 5e
 
 You do not need to switch systems. You only need to make light matter. The following tools work together. Pick three and commit to them for a full dungeon, then add more once your table sees the difference.
