chore(article): More editing on darkness post

--- a/content/posts/2025-09-30-shedding-light-on-darkness-in-dnd.mdx
+++ b/content/posts/2025-09-30-shedding-light-on-darkness-in-dnd.mdx
@@ -20,17 +20,11 @@ We're losing something important when we treat light as a non-issue. This articl
 
 This is key to engaging players, and making them feel like their choices matter and giving them more agency. If they can just ignore the dark, then it becomes a non-issue, and the game loses a lot of its tension and excitement.
 
-## What We Lost When Light Became Free
-
-Darkness used to be a timer and a compass. A torch burns. The corridor keeps going. You decide to press on or go back before the last guttering sputter. That choice built tension without a single attack roll. Rooms felt larger because you could not see the edges. Ceilings felt taller because the beam did not reach. Monsters were not stronger. They were patient and outside the light.
-
-Old-school referees leaned into this. “Strict time records” meant torches expired on schedule. Wandering checks punished stalling. Threats aimed at flame, not armor class. The result was a crawl that felt like survival, not just a series of set pieces.
-
 ## The Shadowdark Reminder
 
-Shadowdark RPG packages that older energy for modern play. No one starts with darkvision. Light is finite. The Light spell lasts an hour. When the party’s lights go out, encounter pressure spikes and the dungeon becomes actively hostile. Many foes see in the dark. That asymmetry flips a lantern into a beacon and makes decisions around light feel meaningful again. If you want a concise look at why this works, start here: [Shadowdark RPG](https://www.thearcanelibrary.com/pages/shadowdark-rpg). For a sharp refresher on vision rules at the table, Angry GM’s piece is worth every minute: [Ask Angry: Seeing in the Dark](https://theangrygm.com/ask-angry-seeing-in-the-dark/).
+Shadowdark RPG packages that energy and excitement from the past for modern play. No one starts with darkvision. Light is finite. All light sources last a real world hour. When the party’s lights go out, encounter pressure spikes and the dungeon becomes actively hostile. Many foes see in the dark. That asymmetry flips a lantern into a beacon and makes decisions around light feel meaningful again. If you want a concise look at why this works, start here: [Shadowdark RPG](https://www.thearcanelibrary.com/pages/shadowdark-rpg). For a spicy refresher on vision rules at the table, Angry GM’s piece is worth every minute: [Ask Angry: Seeing in the Dark](https://theangrygm.com/ask-angry-seeing-in-the-dark/).
 
-Shadowdark didn't invent these ideas. Starting with a deep appreciation for the kind of exiting adventures created by early D&D, it repackaged them for a new audience. You can too.
+Shadowdark didn't invent these ideas. Starting with a deep appreciation for the kind of exiting adventures created by early D&D, it repackaged them for a new audience. You can use this to spice things up again in your 5e games as well.
 
 ## A Practical Toolkit for 5e
 
